--- a/css/game.css
+++ b/css/game.css
@@ -1,23 +1,70 @@
-html {
-    height: 100vh;
-}
-
 body {
     text-align: center;
     color: #bbb;
 }
 
-.board-container{
-    height: 300px;
+.board-container {
+    height: auto;
 }
 
 table {
-    margin: 100px auto;
+    margin: 0 auto;
     border: 1px solid lightgray;
+    border-collapse: collapse;
 }
 
 .cell {
     width: 40px;
     height: 40px;
     font-size: 1.5em;
+    border: 1px solid black;
+    cursor: pointer;
+}
+
+.difficulty {
+    margin-top: 50px;
+    line-height: 0;
+}
+
+.difficulty button {
+    cursor: pointer;
+    margin: 0;
+}
+
+.end-game {
+    visibility: hidden;
+    margin: 20px auto;
+    padding: 10px;
+}
+
+.end-text {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #333;
+
+    padding-bottom: 15px;
+}
+
+.extras {
+    margin: 10px auto;
+    text-align: center;
+    width: 100%; 
+}
+
+.lives, .hints {
+    display: inline-block; 
+    vertical-align: middle;
+    font-size: 1.5rem; 
+    margin: 0 10px;    
+}
+
+.hint{
+    cursor: pointer;
+}
+
+.smilyy-btn{
+    font-size: 1.5rem;
+    cursor: pointer;
+    margin-top: 10px;
+    margin-bottom: 5px;
 }
